[DRAFT] lncli: add DisableChannel command
Just experimenting with wiring everything together!
